# CerberusObfuscator

./: BATTLE_SUMMARY.md  README.md  battle_demo.py  cerberus.py  cerberusalt.py  cerberusbin.py  compare_cerberus.py  example.py  pyproject.toml  requirements.txt  setup.py  test_cerberus.py
cerberus/: __init__.py  cli.py  config.py  encryption.py  exceptions.py  names.py  obfuscator.py
